Fixed: Footer not showing on mobile

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -22,15 +22,6 @@
     }
 }
 
-.window__main__navbar {
-    grid-row: 2;
-    -ms-grid-row: 2;
-    grid-column: 2;
-    -ms-grid-column: 2;
-    grid-area: nav;
-    border-bottom: 1px solid var(--border);
-}
-
 /* Window's Sidebar Styles */
 .window__sidebar {
     -ms-grid-row: 2;
@@ -69,9 +60,9 @@
         -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
         -ms-grid-template-columns: 1fr;
-        -ms-grid-rows: 32px 40px 40px 1fr 32px;
-        grid-template-rows: 32px 40px 40px 1fr 32px;
-        grid-template-areas: "head" "nav" "nav" "main" "foot";
+        -ms-grid-rows: 32px 80px 1fr 32px;
+        grid-template-rows: 32px 80px 1fr 32px;
+        grid-template-areas: "head" "nav" "main" "foot";
     }
 
     .window__sidebar {
@@ -107,6 +98,14 @@
     .window__sidebar__content {
         display: none;
     }
+
+    .window__main__navbar {
+        height: 80px !important;
+        -ms-grid-columns: 80px 1fr 80px !important;
+        grid-template-columns: 80px 1fr 80px !important;
+        grid-auto-rows: 40px 40px;
+    }
+
     .window__main__breadcrumbs {
         grid-column: 1;
         -ms-grid-column: 1;
@@ -119,22 +118,15 @@
         border-bottom: 1px solid var(--border);
     }
 
-    .window__main__navbar {
-        -ms-grid-columns: 80px 1fr 80px !important;
-        grid-template-columns: 80px 1fr 80px !important;
-        grid-auto-rows: 40px 40px;
+    .window__main__nav,
+    .window__main__view {
+        border-bottom: 1px solid var(--border);
     }
+
     .window__footer,
     .window__main,
     .window__main__navbar {
         width: calc(100vw - 40px) !important;
         margin-left: 40px;
-    }
-    .window__main__navbar {
-        grid-row: 2;
-        -ms-grid-row: 2;
-        -ms-grid-row-span: 2;
-        grid-column: 1;
-        -ms-grid-column: 1;
     }
 }
