--- a/src/styles/sections/_main.scss
+++ b/src/styles/sections/_main.scss
@@ -1,23 +1,29 @@
 .window__main {
     grid-area: main;
     position: relative;
-    width: calc(100vw - 240px);
+    width: calc(100vw - 240px);    
+    overflow-y: auto;
 }
 
 .empty__state {
     height: 100%;
     width: 100%;
     @include flex(center, center);
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 
 .window__main__content {
     display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 0;
     grid-template-columns: 1fr 0;
-    height: calc(100vh - 104px);
+    height: calc(100vh - 144px);
     &.with__preview {
+        -ms-grid-columns: 1fr 321px;
         grid-template-columns: 1fr 321px;
     }
 }
@@ -59,6 +65,7 @@
     -ms-grid-rows: 32px 1fr;
     grid-template-rows: 32px 1fr;
     .table__header, .table__row {
+        display: -ms-grid;
         display: grid;
         grid-template-columns: repeat(auto-fill, calc(100% / 3));
     }
@@ -118,6 +125,7 @@ main.preview__main {
 
 @media screen and (max-width: 980px) {
     .window__main__content.with__preview {
+        -ms-grid-columns: 1fr 0;
         grid-template-columns: 1fr 0;
     }
     .window__main__content__right {
