--- a/src/styles/sections/_navbar.scss
+++ b/src/styles/sections/_navbar.scss
@@ -7,6 +7,8 @@
     grid-template-columns: 80px 1fr 240px 80px;
     background: #fff;
     z-index: 1;
+    grid-area: nav;
+    border-bottom: 1px solid var(--border);
 }
 
 .window__main__nav, .window__main__view {
